# diffusionbench-evals

./: .gitignore  README.md
dpgbench/: README.md  pyproject.toml
dpgbench/dpg_evaluator/: __init__.py  evaluator.py  id2prompt.json  prompt2id.json  utils.py
dpgbench/dpg_evaluator/mplug/: __init__.py  configuration_mplug.py  constants.py  modeling_mplug.py
fd_evaluator/: README.md  pyproject.toml
fd_evaluator/fd_evaluator/: __init__.py  api.py  catalogue.yaml  cli.py  extractors.py  format.py  frechet.py  mind.py  stats.py
geneval/: README.md  pyproject.toml
geneval/geneval_evaluator/: __init__.py  constants.py  evaluator.py  metadata.json  utils.py
t2v_metrics/: README.md  pyproject.toml
t2v_metrics/t2v_metrics/: __init__.py  constants.py  model.py  score.py  vqascore.py
t2v_metrics/t2v_metrics/vqascore_models/: __init__.py  clip_t5_model.py  mm_utils.py  qwen2vl_model.py  qwen3p5_model.py  qwen3vl_model.py  vqa_model.py
t2v_metrics/t2v_metrics/vqascore_models/clip_t5/model/: __init__.py
t2v_metrics/t2v_metrics/vqascore_models/clip_t5/model/language_model/: clip_t5.py
t2v_metrics/t2v_metrics/vqascore_models/clip_t5/model/multimodal_encoder/: clip_encoder.py
