[project]
name = "dpg_evaluator"
version = "0.1.0"
description = "Minimal DPG-Bench evaluator for text-to-image generation"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.2",
  "pandas>=2.3",
  "pillow>=12.1",
  "pyyaml>=6.0",
  "torch>=2.10",
  "torchvision>=0.25",
  "tqdm>=4.67",
  "transformers>=5.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dpg_evaluator*"]

[tool.setuptools.package-data]
dpg_evaluator = ["*.json", "*.csv"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
