[project]
name = "fd_evaluator"
version = "0.1.0"
description = "Frechet distance (FID / FDR6) and MIND across a fixed six-encoder zoo for image generation eval"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.2",
  "scipy>=1.15",
  "pillow>=12.0",
  "torch>=2.10",
  "torchvision>=0.25",
  "tqdm>=4.67",
  "timm>=1.0.16",
  "huggingface-hub>=0.30",
  "pyyaml>=6.0",
  "torch-fidelity==0.3.0",
]

[project.scripts]
fdeval = "fd_evaluator.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fd_evaluator*"]

[tool.setuptools.package-data]
fd_evaluator = ["*.yaml"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
