[project]
name = "t2v_metrics"
version = "0.1.0"
description = "Minimal VQAScore implementation for text-to-vision evaluation"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.2",
  "opencv-python>=4.12",
  "packaging>=25.0",
  "pillow>=12.1",
  "requests>=2.32",
  "torch>=2.10",
  "torchvision>=0.25",
  "tqdm>=4.67",
  "transformers>=5.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["t2v_metrics*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
